--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
     "sass-resources-loader": "^2.2.1",
+    "slugify-js": "^0.0.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
